--- a/index.html
+++ b/index.html
@@ -11,5 +11,25 @@
 
     <script type="module" src="./js/index.js"></script>
   </head>
-  <body></body>
+  <body>
+    <header class="header">
+      <div>
+        <img src="./images/logo.png" alt="Logo" />
+      </div>
+      <nav>
+        <a href="#">挑戰自我</a>
+        <a href="#">課程說明</a>
+        <a href="#">培訓成果</a>
+      </nav>
+    </header>
+    <!-- landing -->
+    <section class="section-landing"></section>
+    <!-- learn more #1 -->
+    <section class="section-learn-more"></section>
+    <!-- steps -->
+    <section class="section-steps"></section>
+    <!-- result -->
+    <section class="section-result"></section>
+    <footer class="footer"></footer>
+  </body>
 </html>
