--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <script type="module" src="./js/index.js"></script>
   </head>
   <body>
-    <header class="header">
+    <header class="header flex justify-between items-center">
       <div>
         <img src="./images/logo.png" alt="Logo" />
       </div>
