--- a/index.html
+++ b/index.html
@@ -31,6 +31,37 @@
         <p>學會，百萬年薪不是夢</p>
       </div>
     </section>
+    <!-- sign up -->
+    <section class="section-signup flex justify-center items-center">
+      <div class="container">
+        <div class="row">
+          <div class="col">
+            <div class="block bg-primary color-white">
+              <span class="font-size-largest">優惠活動結束</span>
+              <span class="font-size-large">請再關注我們的優惠時間</span>
+            </div>
+          </div>
+          <div class="col">
+            <div class="block bg-secondary color-white"></div>
+          </div>
+          <div class="col">
+            <div class="block bg-purple color-white pt-2">
+              <span class="font-size-large">
+                已有
+                <strong id="SignedupCount" class="font-size-largest">70</strong>
+                人報名
+              </span>
+              <button
+                type="button"
+                class="button bg-white color-purple mt-1 px-5"
+              >
+                搶先報名
+              </button>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
     <!-- learn more #1 -->
     <section class="section-learn-more"></section>
     <!-- steps -->
