--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <!-- landing -->
     <section class="section-landing flex justify-center items-center">
       <div class="jumbo flex flex-col justify-center items-center">
-        <span class="h2">F2E 前端開發</span>
+        <span class="display-h2">F2E 前端開發</span>
         <h1>前端工程師排版試題</h1>
         <p>學會，百萬年薪不是夢</p>
       </div>
@@ -35,16 +35,16 @@
     <section class="section-signup flex justify-center items-center">
       <div class="container">
         <div class="row">
-          <div class="col">
+          <div class="col mt-0">
             <div class="block bg-primary color-white">
               <span class="font-size-largest">優惠活動結束</span>
               <span class="font-size-large">請再關注我們的優惠時間</span>
             </div>
           </div>
-          <div class="col">
+          <div class="col mt-0">
             <div class="block bg-secondary color-white"></div>
           </div>
-          <div class="col">
+          <div class="col mt-0">
             <div class="block bg-purple color-white pt-2">
               <span class="font-size-large">
                 已有
@@ -63,7 +63,49 @@
       </div>
     </section>
     <!-- learn more #1 -->
-    <section class="section-learn-more"></section>
+    <section class="section-learn-more">
+      <div class="container">
+        <div class="row mb-4 section-learn-more__row-1">
+          <div class="col col-md-6">
+            <h2 class="display-h1 color-primary mb-5">
+              轉職？成為前端工程師？挑戰自我？三個願望一次滿足！
+            </h2>
+            <p class="font-size-large">
+              我們的學員來自獸醫、咖啡師、圖像設計師等不同背景
+              <br />
+              他們克服心中的恐懼，冒著最後有可能一無所有的風險
+              <br />
+              挑戰未知的領域，最終成為前端工程師
+            </p>
+          </div>
+        </div>
+        <div class="row section-learn-more__row-background">
+          <div class="col"></div>
+        </div>
+        <div class="row mb-4 section-learn-more__row-2">
+          <div class="col">
+            <!-- TODO: implement button click handler -->
+            <button
+              type="button"
+              class="section-learn-more__video-button"
+              onclick="openVideo"
+            >
+              <img src="./images/youtube-brands.png" alt="Play" />
+            </button>
+          </div>
+        </div>
+        <div class="row mb-6">
+          <div class="col flex justify-center items-center my-5">
+            <button
+              type="button"
+              class="button bg-primary color-white font-size-largest px-5"
+            >
+              我想了解更多
+            </button>
+          </div>
+        </div>
+      </div>
+    </section>
     <!-- steps -->
     <section class="section-steps"></section>
     <!-- result -->
