--- a/index.html
+++ b/index.html
@@ -107,7 +107,204 @@
       </div>
     </section>
     <!-- steps -->
-    <section class="section-steps"></section>
+    <section class="section-steps">
+      <div class="container">
+        <div class="row">
+          <div class="col flex justify-center items-center">
+            <h2 class="display-h1 bg-white color-primary px-4 py-3">
+              想要培養一技之長，成為前端工程師嗎？
+            </h2>
+          </div>
+        </div>
+        <div class="row mb-4">
+          <div class="col flex justify-center items-center">
+            <h3 class="display-h1">第一階段</h3>
+          </div>
+        </div>
+        <div class="row grid mb-3">
+          <div class="col flex justify-center">
+            <div class="card">
+              <img
+                src="./images/card01.jpg"
+                alt=""
+                class="card-img card-img-top"
+              />
+              <span class="card-badge">第一週</span>
+              <h4 class="card-title">程式規劃基礎</h4>
+              <p class="card-body">組合語言的描述、分析、設計技巧</p>
+            </div>
+          </div>
+          <div class="col flex justify-center">
+            <div class="card">
+              <img
+                src="./images/card02.jpg"
+                alt=""
+                class="card-img card-img-top"
+              />
+              <span class="card-badge">第二週</span>
+              <h4 class="card-title">物件導向程式設計</h4>
+              <p class="card-body">
+                具有物件概念的程式設計典範，同時也是一種程式開發的抽象方針
+              </p>
+            </div>
+          </div>
+          <div class="col flex justify-center">
+            <div class="card">
+              <img
+                src="./images/card02.png"
+                alt=""
+                class="card-img card-img-top"
+              />
+              <span class="card-badge">第三週</span>
+              <h4 class="card-title">資料結構與演算法</h4>
+              <p class="card-body">
+                了解資料結構，之後在程式的設計上才能更加熟練應該要使用何種資料結構。
+              </p>
+            </div>
+          </div>
+        </div>
+        <div class="row mb-4">
+          <div class="col flex justify-center items-center">
+            <h3 class="display-h1">第二階段</h3>
+          </div>
+        </div>
+        <div class="row grid mb-3">
+          <div class="col flex justify-center">
+            <div class="card">
+              <img
+                src="./images/card04.png"
+                alt=""
+                class="card-img card-img-top"
+              />
+              <span class="card-badge">第四週</span>
+              <h4 class="card-title">各領域語言與框架介紹</h4>
+              <p class="card-body">
+                框架以應用為目的，結合了多數常用的元件所形成的初始主體架構
+              </p>
+            </div>
+          </div>
+          <div class="col flex justify-center">
+            <div class="card">
+              <img
+                src="./images/card05.png"
+                alt=""
+                class="card-img card-img-top"
+              />
+              <span class="card-badge">第五週</span>
+              <h4 class="card-title">版控與開源觀念</h4>
+              <p class="card-body">
+                版本控制是維護工程藍圖的標準做法，能追蹤工程藍圖從誕生一直到定案的過程。
+              </p>
+            </div>
+          </div>
+          <div class="col flex justify-center">
+            <div class="card">
+              <img
+                src="./images/card06.jpg"
+                alt=""
+                class="card-img card-img-top"
+              />
+              <span class="card-badge">第六週</span>
+              <h4 class="card-title">專題規劃技巧</h4>
+              <p class="card-body">
+                解決問題、搜集資料、實務應用、團隊合作、知識整合與表達能力。
+              </p>
+            </div>
+          </div>
+          <div class="col flex justify-center">
+            <div class="card">
+              <img
+                src="./images/card07.jpg"
+                alt=""
+                class="card-img card-img-top"
+              />
+              <span class="card-badge">第七週</span>
+              <h4 class="card-title">專題實作與進度追蹤</h4>
+              <p class="card-body">
+                制定規則、剷除阻礙，觀察運作流程，發覺可能的問題，進一步優化流程，讓團隊協作得更順暢。
+              </p>
+            </div>
+          </div>
+          <div class="col flex justify-center">
+            <div class="card">
+              <img
+                src="./images/card08.jpg"
+                alt=""
+                class="card-img card-img-top"
+              />
+              <span class="card-badge">第八週</span>
+              <h4 class="card-title">專題成果發表</h4>
+              <p class="card-body">
+                在這七週學習以來的第一次成果發表，讓大家看到您耀眼的存在！
+              </p>
+            </div>
+          </div>
+        </div>
+        <div class="row mb-4">
+          <div class="col flex justify-center items-center">
+            <h3 class="display-h1">第三階段</h3>
+          </div>
+        </div>
+        <div class="row grid mb-3">
+          <div class="col flex justify-center">
+            <div class="card">
+              <img
+                src="./images/card09.png"
+                alt=""
+                class="card-img card-img-top"
+              />
+              <span class="card-badge">第九週</span>
+              <h4 class="card-title">進程與執行緒</h4>
+              <p class="card-body">
+                進程、線程是一定要搞懂與掌握的知識點，可以增進程式的執行效率。
+              </p>
+            </div>
+          </div>
+          <div class="col flex justify-center">
+            <div class="card">
+              <img
+                src="./images/card10.png"
+                alt=""
+                class="card-img card-img-top"
+              />
+              <span class="card-badge">第十週</span>
+              <h4 class="card-title">網際網路概論</h4>
+              <p class="card-body">
+                全新實用網路新知，完整介紹網路與資料通訊的相關主題與技術。
+              </p>
+            </div>
+          </div>
+          <div class="col flex justify-center">
+            <div class="card">
+              <img
+                src="./images/card11.png"
+                alt=""
+                class="card-img card-img-top"
+              />
+              <span class="card-badge">第十一週</span>
+              <h4 class="card-title">各領域進階語法</h4>
+              <p class="card-body">
+                了解前端領域符合業界使用的進階技巧，並快速辨別使用的領域，加速開發。
+              </p>
+            </div>
+          </div>
+          <div class="col flex justify-center">
+            <div class="card">
+              <img
+                src="./images/card12.png"
+                alt=""
+                class="card-img card-img-top"
+              />
+              <span class="card-badge">第十二週</span>
+              <h4 class="card-title">近代網頁前端的生態演化</h4>
+              <p class="card-body">
+                了解網頁前端的前世今生與愛恨糾葛，讓你知道前端技術為什麼這麼火？
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
     <!-- result -->
     <section class="section-result"></section>
     <footer class="footer"></footer>
