last section and footer

--- a/index.html
+++ b/index.html
@@ -303,10 +303,122 @@
             </div>
           </div>
         </div>
+        <div class="row mb-6">
+          <div class="col flex justify-center items-center my-5">
+            <button
+              type="button"
+              class="button bg-white color-primary font-size-largest px-5"
+            >
+              我有興趣
+            </button>
+          </div>
+        </div>
       </div>
     </section>
     <!-- result -->
-    <section class="section-result"></section>
-    <footer class="footer"></footer>
+    <section class="section-result">
+      <div class="container">
+        <div class="row">
+          <div class="col flex justify-center items-center">
+            <h2 class="display-h1 color-black px-4 py-3">培訓成果</h2>
+          </div>
+        </div>
+        <div class="row justify-center items-center my-6">
+          <div class="col text-center">
+            <p>
+              <strong class="color-primary font-size-largest">159</strong>
+              人
+            </p>
+            <p>結訓校友</p>
+          </div>
+          <div class="col text-center">
+            <p>
+              <strong class="color-primary font-size-largest">85</strong>
+              %
+            </p>
+            <p>成功轉職率</p>
+          </div>
+          <div class="col text-center">
+            <p>
+              <strong class="color-primary font-size-largest">90</strong>
+              %
+            </p>
+            <p>成為前端工程師</p>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col text-center">
+            <table class="table table-bordered table-hover">
+              <thead>
+                <tr>
+                  <th></th>
+                  <th>培訓人數</th>
+                  <th>結訓人數</th>
+                  <th>就業人數</th>
+                </tr>
+              </thead>
+              <tbody>
+                <tr>
+                  <td>第一屆</td>
+                  <td>21人</td>
+                  <td>17人</td>
+                  <td>前端工程師16人</td>
+                </tr>
+                <tr>
+                  <td>第二屆</td>
+                  <td>20人</td>
+                  <td>17人</td>
+                  <td>前端工程師13人</td>
+                </tr>
+                <tr>
+                  <td>第三屆</td>
+                  <td>40人</td>
+                  <td>38人</td>
+                  <td>前端工程師26人</td>
+                </tr>
+                <tr>
+                  <td>第四屆</td>
+                  <td>33人</td>
+                  <td>27人</td>
+                  <td>前端工程師21人</td>
+                </tr>
+                <tr>
+                  <td>第五屆</td>
+                  <td>28人</td>
+                  <td>22人</td>
+                  <td>前端工程師17人</td>
+                </tr>
+                <tr>
+                  <td>第六屆</td>
+                  <td>29人</td>
+                  <td>20人</td>
+                  <td>前端工程師16人</td>
+                </tr>
+              </tbody>
+            </table>
+          </div>
+        </div>
+        <div class="row mb-6">
+          <div class="col flex justify-center items-center my-5">
+            <button
+              type="button"
+              class="button bg-primary color-white font-size-largest px-5"
+            >
+              我想了解更多
+            </button>
+          </div>
+        </div>
+      </div>
+    </section>
+    <footer class="footer">
+      <div class="container">
+        <div class="row">
+          <div class="col">
+            <h6 class="mt-1 mb-0">前端工程師試題</h6>
+            <small class="color-lightgray">本試題純屬練習與測試</small>
+          </div>
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
