--- a/index.html
+++ b/index.html
@@ -42,7 +42,18 @@
             </div>
           </div>
           <div class="col mt-0">
-            <div class="block bg-secondary color-white"></div>
+            <div class="block bg-secondary color-white w-fixed px-5">
+              <div class="stepper">
+                <div class="stepper-bar" role="progressbar" style="width: 25%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
+              </div>
+              <div class="stepper-progress">
+                <!-- TODO: generate steps -->
+                <div class="stepper-progress-step">1</div>
+                <div class="stepper-progress-step">2</div>
+                <div class="stepper-progress-step">3</div>
+                <div class="stepper-progress-step">4</div>
+              </div>
+            </div>
           </div>
           <div class="col mt-0">
             <div class="block bg-purple color-white pt-2">
