--- a/index.html
+++ b/index.html
@@ -41,11 +41,11 @@
     </section>
     <!-- sign up -->
     <section class="section-signup flex justify-center items-center">
-      <div class="container">
-        <div class="row">
-          <div class="col-12 col-sm-3 mt-0">
-            <div class="block bg-primary color-white">
-              <span class="font-size-largest">優惠活動結束</span>
+      <div class="container px-0">
+        <div class="row no-gutters">
+          <div class="col-6 col-sm-3 mt-0">
+            <div class="block bg-primary color-white text-center">
+              <span class="font-size-larger">優惠活動結束</span>
               <span class="font-size-large">請再關注我們的優惠時間</span>
             </div>
           </div>
@@ -80,7 +80,7 @@
               </div>
             </div>
           </div>
-          <div class="col-12 col-sm-3 mt-0">
+          <div class="col-6 col-sm-3 mt-0">
             <div class="block bg-purple color-white pt-2">
               <span class="font-size-large">
                 已有
@@ -89,7 +89,7 @@
               </span>
               <button
                 type="button"
-                class="button bg-white color-purple mt-1 px-5"
+                class="button bg-white color-purple mt-1 px-4"
               >
                 搶先報名
               </button>
@@ -99,14 +99,14 @@
       </div>
     </section>
     <!-- learn more #1 -->
-    <section class="section-learn-more">
-      <div class="container position-relative">
-        <div class="row mb-4 section-learn-more__row-1">
+    <section class="section-learn-more pt-5 pb-6">
+      <div class="container position-relative px-0">
+        <div class="row section-learn-more__row-1 px-3">
           <div class="col col-md-6">
-            <h2 class="display-h1 color-primary mb-5">
+            <h2 class="display-h1 color-primary">
               轉職？成為前端工程師？挑戰自我？三個願望一次滿足！
             </h2>
-            <p class="font-size-large">
+            <p class="font-size-large mt-4">
               我們的學員來自獸醫、咖啡師、圖像設計師等不同背景
               <br />
               他們克服心中的恐懼，冒著最後有可能一無所有的風險
@@ -120,7 +120,7 @@
             <img src="./images/media_talk.jpg" alt="" />
           </div>
         </div>
-        <div class="row mb-4 section-learn-more__row-2">
+        <div class="row section-learn-more__row-2">
           <div class="col px-0">
             <!-- TODO: implement button click handler -->
             <button
@@ -132,31 +132,31 @@
             </button>
           </div>
         </div>
-        <div class="row mb-6">
-          <div class="col flex justify-center items-center my-5">
+        <div class="row mt-5">
+          <div class="col flex justify-center items-center">
             <button
               type="button"
               class="button bg-primary color-white font-size-largest px-5"
             >
-              我想了解更多
+              我想了解更多≫
             </button>
           </div>
         </div>
       </div>
     </section>
     <!-- steps -->
-    <section class="section-steps">
+    <section class="section-steps pt-5 pb-6">
       <div class="container-fluid">
-        <div class="row">
-          <div class="col flex justify-center items-center">
-            <h2 class="display-h1 bg-white color-primary px-4 py-3">
+        <div class="row mb-4">
+          <div class="col flex justify-center items-center px-3">
+            <span class="bg-white color-primary font-size-large px-3 py-3">
               想要培養一技之長，成為前端工程師嗎？
-            </h2>
+            </span>
           </div>
         </div>
         <div class="row mb-4">
           <div class="col flex justify-center items-center">
-            <h3 class="display-h1">第一階段</h3>
+            <h2 class="display-h2">第一階段</h2>
           </div>
         </div>
         <div class="row justify-center items-start mb-3">
@@ -197,7 +197,7 @@
         </div>
         <div class="row mb-4">
           <div class="col flex justify-center items-center">
-            <h3 class="display-h1">第二階段</h3>
+            <h2 class="display-h2">第二階段</h2>
           </div>
         </div>
         <div class="row justify-center items-start mb-3">
@@ -264,7 +264,7 @@
         </div>
         <div class="row mb-4">
           <div class="col flex justify-center items-center">
-            <h3 class="display-h1">第三階段</h3>
+            <h2 class="display-h2">第三階段</h3>
           </div>
         </div>
         <div class="row justify-center items-start mb-3">
@@ -319,7 +319,7 @@
         </div>
         <div class="row mb-4">
           <div class="col flex justify-center items-center">
-            <h3 class="display-h1">第四階段</h3>
+            <h2 class="display-h2">第四階段</h2>
           </div>
         </div>
         <div class="row justify-center items-start mb-3">
@@ -361,42 +361,42 @@
             </p>
           </div>
         </div>
-        <div class="row mb-6">
-          <div class="col flex justify-center items-center my-6">
+        <div class="row mt-5">
+          <div class="col flex justify-center items-center">
             <button
               type="button"
               class="button bg-white color-primary font-size-largest px-5"
             >
-              我有興趣
+              我有興趣≫
             </button>
           </div>
         </div>
       </div>
     </section>
     <!-- result -->
-    <section class="section-result">
+    <section class="section-result pt-5 pb-6">
       <div class="container">
-        <div class="row">
+        <div class="row mb-4">
           <div class="col flex justify-center items-center">
-            <h2 class="display-h1 color-black px-4 py-3">培訓成果</h2>
+            <h2 class="color-black px-4 py-3">培訓成果</h2>
           </div>
         </div>
-        <div class="row justify-center items-center my-6">
-          <div class="col-12 col-sm-4 text-center">
+        <div class="row justify-center items-center">
+          <div class="col-12 col-sm-4 text-center mb-4">
             <p>
               <strong class="color-primary font-size-largest">159</strong>
               人
             </p>
             <p>結訓校友</p>
           </div>
-          <div class="col-12 col-sm-4 text-center">
+          <div class="col-12 col-sm-4 text-center mb-4">
             <p>
               <strong class="color-primary font-size-largest">85</strong>
               %
             </p>
             <p>成功轉職率</p>
           </div>
-          <div class="col-12 col-sm-4 text-center">
+          <div class="col-12 col-sm-4 text-center mb-4">
             <p>
               <strong class="color-primary font-size-largest">90</strong>
               %
@@ -404,8 +404,8 @@
             <p>成為前端工程師</p>
           </div>
         </div>
-        <div class="row">
-          <div class="col text-center">
+        <div class="row mb-4">
+          <div class="col px-3 text-center">
             <table class="table table-bordered table-hover">
               <thead>
                 <tr>
@@ -456,13 +456,13 @@
             </table>
           </div>
         </div>
-        <div class="row mb-6">
-          <div class="col flex justify-center items-center my-5">
+        <div class="row">
+          <div class="col flex justify-center items-center">
             <button
               type="button"
               class="button bg-primary color-white font-size-largest px-5"
             >
-              我想了解更多
+              我想了解更多≫
             </button>
           </div>
         </div>
